[gd_scene load_steps=2 format=3 uid="uid://cf45vxmlche1q"]

[ext_resource type="Script" path="res://app_manager/autoloads/app_manager.gd" id="1_h6oa0"]

[node name="app_manager" type="Node2D" node_paths=PackedStringArray("quit_timer", "quit_label")]
script = ExtResource("1_h6oa0")
quit_timer = NodePath("quit_timer")
quit_label = NodePath("quit_text")

[node name="quit_timer" type="Timer" parent="."]
wait_time = 1.6
one_shot = true

[node name="quit_text" type="Label" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 2.0
offset_top = 3.0
offset_right = 42.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 5
text = "quitting..."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="quit_timer" to="." method="_on_quit_timer_timeout"]
